--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite2</th></tr>
-<tr><td><a href="#t0">login</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">17,111</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">45,526</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite2</th></tr></tbody><tbody id="t0"><tr><th colspan="4">login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">sdemo.LoginTest</td><td><a href="#m0">login</a></td><td rowspan="1">1594811773504</td><td rowspan="1">9516</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">sdemo.LoginTest</td><td><a href="#m0">login</a></td><td rowspan="1">1595525451744</td><td rowspan="1">18313</td></tr><tr class="passedeven"><td><a href="#m1">loginWithoutPassword</a></td><td rowspan="1">1595525444126</td><td rowspan="1">7615</td></tr><tr class="passedeven"><td><a href="#m2">loginWithoutUserAndPass</a></td><td rowspan="1">1595525436191</td><td rowspan="1">3915</td></tr><tr class="passedeven"><td><a href="#m3">loginWithoutUsername</a></td><td rowspan="1">1595525440127</td><td rowspan="1">3993</td></tr></tbody>
 </table>
-<h2>login</h2><h3 id="m0">sdemo.LoginTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">sdemo.LoginTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">sdemo.LoginTest#loginWithoutPassword</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><br><img src=' C:\Users\OROVI~1\AppData\Local\Temp\screenshot43011308879001702.png' height='200' widht='200'/><br><br/>Epic sadface: Password is required</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">sdemo.LoginTest#loginWithoutUserAndPass</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><br><img src=' C:\Users\OROVI~1\AppData\Local\Temp\screenshot8189360590356074723.png' height='200' widht='200'/><br><br/>Epic sadface: Username is required</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">sdemo.LoginTest#loginWithoutUsername</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><br><img src=' C:\Users\OROVI~1\AppData\Local\Temp\screenshot1812435110340116733.png' height='200' widht='200'/><br><br/>Epic sadface: Username is required</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
