--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="cab579">  <td>20/07/15 13:14:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:3, instance:sdemo.LoginTest@76707e36]">login</td> 
-  <td>main@1597655940</td>   <td></td> </tr>
-<tr bgcolor="cab579">  <td>20/07/15 13:13:55</td>   <td>-7139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithoutPassword()[pri:2, instance:sdemo.LoginTest@76707e36]">loginWithoutPassword</td> 
-  <td>main@1597655940</td>   <td></td> </tr>
-<tr bgcolor="cab579">  <td>20/07/15 13:13:47</td>   <td>-15282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithoutUserAndPass()[pri:0, instance:sdemo.LoginTest@76707e36]">loginWithoutUserAndPass</td> 
-  <td>main@1597655940</td>   <td></td> </tr>
-<tr bgcolor="cab579">  <td>20/07/15 13:13:51</td>   <td>-11232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithoutUsername()[pri:1, instance:sdemo.LoginTest@76707e36]">loginWithoutUsername</td> 
-  <td>main@1597655940</td>   <td></td> </tr>
-<tr bgcolor="cab579">  <td>20/07/15 13:13:40</td>   <td>-22796</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:sdemo.LoginTest@76707e36]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1597655940</td>   <td></td> </tr>
-<tr bgcolor="cab579">  <td>20/07/15 13:14:12</td>   <td>9367</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:sdemo.LoginTest@76707e36]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1597655940</td>   <td></td> </tr>
+<tr bgcolor="cab579">  <td>20/07/23 19:30:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:3, instance:sdemo.LoginTest@394e1a0f]">login</td> 
+  <td>main@142555199</td>   <td></td> </tr>
+<tr bgcolor="cab579">  <td>20/07/23 19:30:44</td>   <td>-7619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithoutPassword()[pri:2, instance:sdemo.LoginTest@394e1a0f]">loginWithoutPassword</td> 
+  <td>main@142555199</td>   <td></td> </tr>
+<tr bgcolor="cab579">  <td>20/07/23 19:30:36</td>   <td>-15553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithoutUserAndPass()[pri:0, instance:sdemo.LoginTest@394e1a0f]">loginWithoutUserAndPass</td> 
+  <td>main@142555199</td>   <td></td> </tr>
+<tr bgcolor="cab579">  <td>20/07/23 19:30:40</td>   <td>-11617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginWithoutUsername()[pri:1, instance:sdemo.LoginTest@394e1a0f]">loginWithoutUsername</td> 
+  <td>main@142555199</td>   <td></td> </tr>
+<tr bgcolor="62b3b1">  <td>20/07/23 19:30:25</td>   <td>-26026</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setUp()[pri:0, instance:sdemo.LoginTest@394e1a0f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142555199</td>   <td></td> </tr>
+<tr bgcolor="62b3b1">  <td>20/07/23 19:31:10</td>   <td>18316</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.tearDown()[pri:0, instance:sdemo.LoginTest@394e1a0f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142555199</td>   <td></td> </tr>
 </table>
